Kubernetes/services.yaml
apiVersion: v1

kind: Service

metadata:

  name: pipeline-springboot

  namespace: ${Kubernetes-NameSpace}    # Kubernets namespace

  labels:

    app: pipeline-springboot

    service: <serviceName>

    env: nonprod

spec:

  selector:

    app: pipeline-springboot

    service: <serviceName>

    env: nonprod

  ports:

    - name: http

      port: 8080

      targetPort: 8080

      protocol: TCP
