Kubernetes/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3

kind: Gateway

metadata:

  name: spring-gateway

spec:

  selector:

    istio: ingressgateway # use istio default controller

  servers:

  - port:

      number: 80

      name: http

      protocol: HTTP

    hosts:

    - "*"

---

apiVersion: networking.istio.io/v1alpha3

kind: VirtualService

metadata:

  name: helloworld

spec:

  hosts:

  - "*"

  gateways:

  - spring-gateway

  http:

  - match:

    - uri:

        prefix: /spring

    route:

    - destination:

        host: hello.default.svc.cluster.local

        port:

          number: 8080
